main.tf
provider "aws" {
  region = "ap-southeast-1" # change as needed
}

resource "aws_key_pair" "my_key" {
  key_name   = "my-key"
  public_key = file("./ansible_key.pub") # Adjust path if needed
}

resource "aws_instance" "my_ec2" {
  ami           = "ami-01938df366ac2d954" # Amazon Linux 2 AMI (us-east-1)
  instance_type = "t2.micro"

  key_name = aws_key_pair.my_key.key_name

  tags = {
    Name = "Terraform-Instance"
  }

  # Optional security group
  vpc_security_group_ids = [aws_security_group.allow_ssh.id]
}

resource "aws_security_group" "allow_ssh" {
  name        = "allow_ssh"
  description = "Allow SSH inbound traffic"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP from anywhere"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

output "public_ip" {
  description = "Public IP of the EC2 instance"
  value       = aws_instance.my_ec2.public_ip
}
